--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"
               name="viewport"
-              content="width=device-width"/>
+              content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
         <title>
             Frank R Castillo
         </title>
