--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"
               name="viewport"
-              content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+              content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0i, height=500px"/>
         <title>
             Frank R Castillo
         </title>
@@ -21,9 +21,9 @@
             .fTle a { color: #fefefe !important; word-wrap:break-word; }
             .fLst { list-style: none outside none; border:0px; padding:5px 5px; text-align: left; }
             .wdiv { position: absolute; z-index: 9; background-color: #202020; border: 1px solid #fefefe;
-                    resize: both; overflow: auto; visibility: visible; padding-top: 12px; }
+                    resize: both; overflow: auto; visibility: visible; }
             .wdivheader { cursor: default; z-index:10; background-color: #fefefe; color: #111111;
-                          position: fixed; top: inherit; width: inherit; }
+                          width: inherit; }
             .closeBtn { float:right; color: #111111; z-index: 11; vertical-align: top; font-size: 9px; }
             .mainCell { width: 100%; vertical-align: top; }
             #profile {  height:105px; width: 105px; }
@@ -36,8 +36,8 @@
             #xmark { color: #ff0000; animation: blink 1s infinite; }
             @keyframes blink { 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
             #cs { left:  10px; top:  10px; width: 760px; height: 360px; }
-            #pw { left:  25px; top:  30px; width: 105px; height: 106px; }
-            #mw { left: 135px; top:  30px; width: 650px; height: 106px; }
+            #pw { left:  25px; top:  30px; width: 105px; height: 118px; }
+            #mw { left: 135px; top:  30px; width: 650px; height: 118px; }
             #fw { left:  25px; top: 154px; width: 760px; }
             @media only screen and (max-width: 480px) and (max-device-width: 480px) and (orientation: portrait) {
                 #profile { height: 150px; width: 150px; }
