--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"
               name="viewport"
-              content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0i, width=349px"/>
+              content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes, width=349"/>
         <title>
             Frank R Castillo
         </title>
@@ -381,8 +381,8 @@
             // function to print to console
             function prln(printInput) {
                 consHist.innerHTML += printInput + "<br/>";
-                inputbxElem.focus();
                 inputbxElem.value = "";
+                inputbxElem.focus();
             }
             
             // running processes
