--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         outline: none; }
             #xmark { color: #ff0000; animation: blink 1s infinite; }
             @keyframes blink { 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
-            #cs { left:  10px; top:  10px; width: 760px; height: 360px; }
+            #cs { left:  10px; top:  10px; width: 540px; height: 360px; }
             #pw { left:  25px; top:  30px; width: 105px; height: 118px; }
             #mw { left: 135px; top:  30px; width: 650px; height: 118px; }
             #fw { left:  25px; top: 154px; width: 760px; }
@@ -405,7 +405,7 @@
             }
 
             function welcome() {
-                var welcomeMsg  = "System console, written in JavaScript by Franklin Castillo. ";
+                var welcomeMsg  = "System console, written in JavaScript by Franklin Castillo.<br/>";
                 welcomeMsg += "Still under construction. Enter 'help' for a list of available commands.<br/>";
 
                 var worldmap = new Array(3);
