--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                    and (max-width: 480px)
                    and (max-device-width: 480px)
                    and (orientation: portrait) {
-                       #para { width: 360px; }
+                       #para { width: auto; }
             }
 
         </style>
