--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             inputbxElem.focus();
 
-            document.addEventListener('mousedown', function(e) {
+            $(document).click(function(e) {
                 inputbxElem.focus();
             });
 
