--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         </title>
         <style>
             body  { margin-bottom: 0px; margin-left:0px;  margin-right: 0px; margin-top: 0px;
-                    font-size: 11px;    text-align: left; color: #f69f00; background-color: #000000;
-                    font-family: "Lucida Console", Monaco, monospace; text-shadow: 2px 2px 5px #ffa500}
+                    font-size: 11px;    text-align: left; color: #ffffff; background-color: #000000;
+                    font-family: "Lucida Console", Monaco, monospace; text-shadow: 2px 2px 5px #ffffff}
             table { border-spacing: 0px; }
-            a  { color: #f69f00; text-decoration: none; }
+            a  { color: #ffffff; text-decoration: none; }
             p  { font-weight: normal; list-style: none outside none; padding: 5px 5px; }
             ul { margin-top: 0; margin-bottom: 0; }
-            .fTle a { color: #f69f00 !important; word-wrap: break-word; }
+            .fTle a { color: #ffffff !important; word-wrap: break-word; }
             .fLst { list-style: none outside none; border: 0px; padding: 5px 5px; text-align: left; }
             #helpln { display: inline-block; width: 90px; }
-            #inputbox { width: 95%; border: 0px; background-color: #000000; color: #f69f00;
+            #inputbox { width: 95%; border: 0px; background-color: #000000; color: #ffffff;
                         font-family: "Lucida Console", Monaco, monospace; font-size: 11px; 
-                        outline: none; text-shadow: 2px 2px 5px #ffa500; }
-            #xmark { color: #f69f00; animation: blink 1s infinite; }
+                        outline: none; text-shadow: 2px 2px 5px #f0f0f0; }
+            #xmark { color: #ffffff; animation: blink 1s infinite; }
             @keyframes blink { 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
-            #para { width: 740px; text-align: justify; border: 2px solid #f69f00; padding: 5px 5px 5px 5px; 
+            #para { width: 740px; text-align: justify; border: 2px solid #ffffff; padding: 5px 5px 5px 5px; 
                     margin: 5px 5px 5px 5px; }
             #profile { height: 105px; width: 105px; position: relative; float: left; padding: 0px 5px 0px 0px; 
-                       filter: grayscale(1) sepia(1) saturate(5) contrast(2) brightness(1.5)
-                               drop-shadow(0px 0px 3px #ffa500); }
-            .sudoku  { width: 15px; background-color: #000000; color: #f69f00; border: 1px solid #f69f00;
+                       filter: grayscale(1) saturate(5) contrast(2) brightness(1.5)
+                               drop-shadow(0px 0px 3px #f0f0f0); }
+            .sudoku  { width: 15px; background-color: #000000; color: #ffffff; border: 1px solid #ffffff;
                        font-family: "Lucida Console", Monaco, monospace; font-size: 11px; text-align: center;}
             @media only screen 
                    and (max-width: 480px)
