--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             #nametitle { padding: 5px 5px 5px 5px;  }
             .sudoku  { width: 15px; background-color: #000000; color: #ffa500; border: 1px solid #ffa500;
                        font-family: "Lucida Console", Monaco, monospace; font-size: 11px; text-align: center; }
-            #vstr { width: 740px; }
+            #vstr { white-space: nowrap; }
             @media only screen 
                    and (max-width: 480px)
                    and (max-device-width: 480px)
