--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         </title>
         <style>
             body  { margin-bottom: 0px; margin-left: 0px; margin-right: 0px; margin-top: 0px;
-                    font-size:    11px; text-align: left; color:    #ffa500;
-                    background-color: #000000; font-family:  "Lucida Console", Monaco, monospace;
-                    text-shadow: 0px 0px 5px #ffa500; }
+                    font-size: 11px; text-align: left; color: #ffa500; background-color: #000000;
+                    font-family: "Lucida Console", Monaco, monospace; text-shadow: 0px 0px 5px #ffa500; }
             
             table { border-spacing: 0px; }
 
@@ -49,7 +48,7 @@
             .sudoku  { width: 15px; background-color: #000000; color: #ffa500; border: 1px solid #ffa500;
                        font-family: "Lucida Console", Monaco, monospace; font-size: 11px; text-align: center; }
 
-           #vstr { white-space: nowrap; }
+            #vstr { white-space: nowrap; }
 
             @media only screen 
                    and (max-width: 480px)
