--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 
                 rssfeeds({ feedName:   "Medium",
                            divName:    "MediumRss",
-                           feedUrl:    "https://medium.com/feed/frank-r-castillo", 
-                           pageUrl:    "https://medium.com/frank-r-castillo",
+                           feedUrl:    "https://medium.com/feed/thoughts-on-political-progress", 
+                           pageUrl:    "https://medium.com/thoughts-on-political-progress",
                            maxCount:   10,
                            charLimit:  100,
                            dateFormat: dteOpt });
