--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         text-shadow: 0px 0px 5px #ffa500; }
             #xmark { color: #ffa500; animation: blink 1s infinite; }
             @keyframes blink{ 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
-            #para { width: 740px; text-align: justify; }
+            #para { width: 740px; text-align: justify; padding: 5px 5px 5px 5px; }
             #profile { height: 105px; width: 105px; position: relative; float: left; padding: 0px 5px 0px 0px; 
                        filter: grayscale(1) sepia(1) contrast(2) saturate(5) drop-shadow(0px 0px 10px #ffa500); }
             #nametitle { padding: 5px 5px 5px 5px; }
