--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
                            + "together economics, mathematics, and big data to develop systems and methods that help "
                            + "mitigate financial crime risk. In 2013, I received an Honorable Discharge from the United "
                            + "States Marine Corps after nine years of service.</span>";
-                var prbody = "<b id='nametitle'>Frank R. Castillo: "
+                var smbody = "<b>Social Media:</b> "
                            + "<a href='https://medium.com/thoughts-on-political-progress' target='_blank'>Medium</a>, "
                            + "<a href='https://twitter.com/FrankRCastillo' target='_blank'>Twitter</a>, "
                            + "<a href='https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g' target='_blank'>YouTube</a>, "
                            + "<a href='https://github.com/FrankRCastillo' target='_blank'>GitHub</a>, "
-                           + "<a href='https://www.linkedin.com/in/franklinrcastillo/' target='_blank'>LinkedIn</a></b>"
-                           + "<div id='para'>" + mwbody + "</div>";
+                           + "<a href='https://www.linkedin.com/in/franklinrcastillo/' target='_blank'>LinkedIn</a>"
+                var prbody = "<b id='nametitle'>Frank R. Castillo:</b><div id='para'>" + mwbody + smbody + "</div>";
                 var fwbody = "<div id='TwitterRss'></div><div id='MediumRss'></div><div id='YouTubeRss'></div>";
                 var mnbody = prbody + fwbody;
 
