--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                            + "<a href='https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g' target='_blank'>YouTube</a>, "
                            + "<a href='https://github.com/FrankRCastillo' target='_blank'>GitHub</a>, "
                            + "<a href='https://www.linkedin.com/in/franklinrcastillo/' target='_blank'>LinkedIn</a>"
-                var prbody = "<b id='nametitle'>Frank R. Castillo:</b><div id='para'>" + mwbody + smbody + "</div>";
+                var prbody = "<b id='nametitle'>Frank R. Castillo:</b><div id='para'>" + mwbody + "</div>" + smbody;
                 var fwbody = "<div id='TwitterRss'></div><div id='MediumRss'></div><div id='YouTubeRss'></div>";
                 var mnbody = prbody + fwbody;
 
