--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                         });
 
-                        var sc = '<ul class="fLst">' + param.feedName + ":" + s + '<a href="' +
+                        var sc = '<ul class="fLst"><b>' + param.feedName + ":</b>" + s + '<a href="' +
                                  param.pageUrl + '" target="_blank">More...</a></ul>';
                         $("#" + param.divName).append(sc);;
                     }
@@ -221,7 +221,7 @@
                            + "<a href='https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g' target='_blank'>YouTube</a>, "
                            + "<a href='https://github.com/FrankRCastillo' target='_blank'>GitHub</a>, "
                            + "<a href='https://www.linkedin.com/in/franklinrcastillo/' target='_blank'>LinkedIn</a>"
-                var prbody = "<b id='nametitle'>Frank R. Castillo:</b><div id='para'>" + mwbody + "<br/>" + smbody + "</div>";
+                var prbody = "<b id='nametitle'>Frank R. Castillo:</b><div id='para'>" + mwbody + "<br/><br/>" + smbody + "</div>";
                 var fwbody = "<div id='TwitterRss'></div><div id='MediumRss'></div><div id='YouTubeRss'></div>";
                 var mnbody = prbody + fwbody;
 
