--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             #helpln { display: inline-block; width: 90px; }
             #inputbox { width: 95%; border: 0px; background-color: #000000; color: #ffa500;
                         font-family: "Lucida Console", Monaco, monospace; font-size: 11px; outline: none;
-                        text-shadow: 0px 0px 5px #ffa500; }
+                        text-shadow: 0px 0px 5px #ffa500; padding: 5px 5px 5px 5px; }
             #xmark { color: #ffa500; animation: blink 1s infinite; }
             @keyframes blink{ 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
-            #para { width: 740px; text-align: justify; padding: 5px 5px 5px 5px; }
+            #para { width: 740px; text-align: justify; padding: 5px; }
+            #scrollback { padding: 5px; }
             #profile { height: 105px; width: 105px; position: relative; float: left; padding: 0px 5px 0px 0px; 
                        filter: grayscale(1) sepia(1) contrast(2) saturate(5) drop-shadow(0px 0px 10px #ffa500); }
             #nametitle { padding: 5px 5px 5px 5px; }
