--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             #helpln { display: inline-block; width: 90px; }
             #inputbox { width: 95%; border: 0px; background-color: #000000; color: #ffa500;
                         font-family: "Lucida Console", Monaco, monospace; font-size: 11px; outline: none;
-                        text-shadow: 0px 0px 5px #ffa500; padding: 5px 5px 5px 5px; }
+                        text-shadow: 0px 0px 5px #ffa500; }
             #xmark { color: #ffa500; animation: blink 1s infinite; }
             @keyframes blink{ 0% { opacity: 0.0 } 100% { opacity: 1.0 } }
             #para { width: 740px; text-align: justify; }
