--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             p  { font-weight: normal; list-style: none outside none; padding: 5px 5px; }
             ul { margin-top: 0; margin-bottom: 0; }
             .fTle a { color: #ffa500 !important; word-wrap: break-word; }
-            .fLst   { list-style: none outside none; border: 0px; padding: 5px 5px; text-align: left; }
+            .fLst   { list-style: none outside none; border: 0px; text-align: left; }
             #helpln { display: inline-block; width: 90px; }
             #inputbox { width: 95%; border: 0px; background-color: #000000; color: #ffa500;
                         font-family: "Lucida Console", Monaco, monospace; font-size: 11px; outline: none;
@@ -26,7 +26,6 @@
             #scrollback { padding: 5px; }
             #profile { height: 105px; width: 105px; position: relative; float: left; padding: 0px 5px 0px 0px; 
                        filter: grayscale(1) sepia(1) contrast(2) saturate(5) drop-shadow(0px 0px 10px #ffa500); }
-            #nametitle { padding: 5px 5px 5px 5px; }
             .sudoku  { width: 15px; background-color: #000000; color: #ffa500; border: 1px solid #ffa500;
                        font-family: "Lucida Console", Monaco, monospace; font-size: 11px; text-align: center; }
             #vstr { white-space: nowrap; }
