--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                            + "together economics, mathematics, and big data to develop systems and methods that help "
                            + "mitigate financial crime risk. In 2013, I received an Honorable Discharge from the United "
                            + "States Marine Corps after nine years of service.</span>";
-                var smbody = "<b>Social Media:</b> "
+                var smbody = "<b>Social Media:</b><br/>"
                            + "<a href='https://medium.com/thoughts-on-political-progress' target='_blank'>Medium</a>, "
                            + "<a href='https://twitter.com/FrankRCastillo' target='_blank'>Twitter</a>, "
                            + "<a href='https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g' target='_blank'>YouTube</a>, "
